--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ a {
   color: black;
 }
 
-textarea,#server-command {
+textarea,#server-command,#server-button {
   font-family: "Courier";
   font-size: 100%;
 }
@@ -40,9 +40,12 @@ td {
   padding-left: 7px;
   padding-right: 0px;
 }
-.server-button {
-  background-color: #ffffff;
+#server-button-container {
+  height: 100%;
+}
+#server-button {
+  background-color: #f03131;
   border-radius: 0px;
   width: 100%;
-  height: 50%;
+  height: 100%;
 }
