Add sendCommand function

--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,7 @@ a {
 textarea,#server-command,#server-button {
   font-family: "Courier";
   font-size: 100%;
+  color: black;
 }
 td {
   padding-top: 0px;
