--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ a {
   color: black;
 }
 
-textarea,#server-command,#server-button,.settings-buttons {
+textarea,button,#server-command {
   font-family: "Courier";
   font-size: 100%;
   color: black;
@@ -69,7 +69,7 @@ input[type="checkbox"] {
 input[type="checkbox"]:checked {
   background-color: green;
 }
-.settings-buttons {
+.settings-buttons,#world-add-button {
   background-color: #21de50;
   border-radius: 0px;
   padding: 10px;
